--- a/public/css/style.css
+++ b/public/css/style.css
@@ -640,7 +640,7 @@
   }
 
   .why-us .swiper {
-    margin: 140px 140px 120px 140px;
+    margin: 140px 120px 120px 140px;
     overflow: hidden;
   }
 
@@ -985,7 +985,7 @@
     bottom: 0;
     right: 0;
     height: 40px;
-    opacity: 0;
+    opacity: 1;
     transition: ease-in-out 0.3s;
     background: rgba(255, 255, 255, 0.85);
     display: flex;
@@ -1041,9 +1041,9 @@
     color: #6c757d;
   }
 
-  .team .team-member:hover .social {
+  /* .team .team-member:hover .social {
     opacity: 1;
-  }
+  } */
 
   /*--------------------------------------------------------------
   # Services Cards Section
@@ -1172,6 +1172,8 @@
     }
   }
 
+
+  
   /*--------------------------------------------------------------
   # Portfolio Section
   --------------------------------------------------------------*/
@@ -1217,13 +1219,14 @@
 
   .portfolio .portfolio-item {
     position: relative;
+    background: #000;
   }
 
   .portfolio .portfolio-item .portfolio-info {
     opacity: 0;
     position: absolute;
-    left: 30px;
-    right: 30px;
+    left: 5%;
+    right: 5%;
     bottom: 0;
     z-index: 3;
     transition: all ease-in-out 0.3s;
